# TopCoW_Eval_Metrics

./: .gitattributes  .gitignore  README.md  constants.py  metric_functions.py  pyproject.toml  requirements.txt  setup.sh  test_Dice_dict.py  test_betti_num.py  test_clDice.py  test_metric_functions.py  utils_nii_mha_sitk.py
.github/workflows/: github_actions.yml
test_assets/box_metrics/: cow-roi.json  test_ROI-1_Metadata.txt  test_crop_gt_and_pred.txt  test_iou_dict_from_files_hollow_6x3x3_4x3x3_box_1.JSON  test_iou_dict_from_files_hollow_6x3x3_4x3x3_box_2.JSON  test_iou_dict_from_files_hollow_6x3x3_4x3x3_box_2.TXT  test_iou_dict_from_files_hollow_6x3x3_4x7x3_box_1.TXT  test_iou_dict_from_files_hollow_6x3x3_4x7x3_box_2.JSON  test_iou_dict_from_files_hollow_6x3x3_4x7x3_box_2.TXT  test_iou_dict_from_files_hollow_6x3x3_shifted_box_1.json  test_iou_dict_from_files_hollow_6x3x3_shifted_box_1.txt  test_iou_dict_from_files_hollow_6x3x3_shifted_box_2.txt  test_iou_dict_from_files_tiny_vs_small_box_1.json  test_iou_dict_from_files_tiny_vs_small_box_2.json
test_assets/edg_metrics/: antpos_np_arr_pred.json  antpos_np_arr_pred.yml  cow-ant-post-classification_pred.JSON  cow-ant-post-classification_pred.yml  topcow_ct_003.yml
topcow24_eval/: base_algorithm.py  configs.py  constants.py  evaluation.py  for_gc_docker.py  score_case_task_1_seg.py  score_case_task_2_box.py  score_case_task_3_edg.py  test_evaluation.py  test_evaluation_task_1_seg.py  test_evaluation_task_2_box.py  test_evaluation_task_3_edg.py  test_score_case.py
topcow24_eval/aggregate/: aggregate_all_topo_dicts.py  (+7 more)
(+65 files in other folders)
